Fixed width sidebar, align with header search area

--- a/scss/header.scss
+++ b/scss/header.scss
@@ -1,65 +1,80 @@
 @import "_colors.scss";
 @import "compass/css3/gradient";
+@import "layout.scss";
 
+$header-padding : 13px;
 .header {
-    height: 24px;
-    padding: 13px;
+    height: 50px;
     @include linear-gradient(color-stops(#eeeeee, #cccccc));
-
-    div {
-        display: inline-block;
-        margin: 0 5px;
+    vertical-align : middle;
+    > div {
+        margin: 4px 5px;
         vertical-align: middle;
-
-        &.right {
-            float: right;
-            line-height: 28px;
-        }
-
-        &.logo {
-            a {
-                font-family: Arial;
-                font-size: 18px;
-                color: black;
-
-                em {
-                    font-weight: bold;
-                }
-            }
-            padding-right : 15px;
-            border-right: 1px solid $header-border-color;
-        }
-
-        &.messages {
-            font-size: 11px;
-            font-weight: 600;
-            a {
-                background: red;
-                color: white;
-                padding: 5px;
-                margin-left: 10px;
-            }
-        }
-
-        &.search {
-            width : 50%;
-            input {
-                /*width: 90%;*/
-                padding: 4px;
-            }
-        }
-
-        &.username {
-            border-right: 1px solid $header-border-color;
-            font-size: 11px;
-            text-align: right;
-            padding-right: 8px;
-        }
-
-        &.account {
-            font-size: 11px;
-            text-align: right;
+        line-height: 30px;
+        div {
+            display : inline-block;
         }
     }
 
+    .right {
+            float: right;
+            width : $sidebar-width;
+            text-align : right;
+
+            margin : 4px 0px;
+    }
+
+    .left {
+        float : left;
+    }
+
+    .logo {
+        a {
+            font-family: Arial;
+            font-size: 18px;
+            color: black;
+
+            em {
+                font-weight: bold;
+            }
+        }
+        padding-right : 15px;
+        border-right: 1px solid $header-border-color;
+    }
+
+    .messages {
+        font-size: 11px;
+        font-weight: 600;
+        padding-left: 10px;
+        a {
+            background: red;
+            color: white;
+            padding: 5px;
+            margin-left: 10px;
+        }
+    }
+
+    .search {
+        overflow: hidden;
+        padding-top: 4px;
+        padding-left: 5px;
+        margin-right: 0px;
+        input {
+            padding: 4px;
+        }
+    }
+
+    .username {
+        border-right: 1px solid $header-border-color;
+        font-size: 11px;
+        text-align: right;
+        padding-right: 8px;
+    }
+
+    .account {
+        font-size: 11px;
+        text-align: right;
+        padding-right: 15px;
+        padding-left: 10px;
+    }
 }
