--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -1,5 +1,6 @@
 @import "_colors.scss";
 @import "compass/css3/border-radius";
+$sidebar-width : 250px;
 
 #guts {
     padding: 0 7px 7px 7px;
@@ -29,9 +30,8 @@
 }
 
 #main_content {
-    float: left;
-    width: 74%;
     border: 1px solid $guts-border-color;
+    overflow:hidden;
     @include border-radius(3px);
 }
 
@@ -49,7 +49,8 @@
 }
 
 #sidebar {
-    width: 25%;
+    width: $sidebar-width;
     float: right;
+    min-height:400px;
     text-align: center;
 }
